--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NexusMeta | Future Systems</title>
+    <title>MetaNexus | Intelligent Systems</title>
     <style>
         /* --- FUTURISTIC VARIABLES --- */
         :root {
@@ -149,8 +149,8 @@
     </div>
 
     <nav class="container">
-        <div class="logo">NEXUS<span style="font-weight:300">META</span></div>
-        <a href="metanexus77@gmail.com" style="color:white; text-decoration:none; font-size:0.9rem; opacity:0.8;">metanexus77@gmail.com</a>
+        <div class="logo">META<span style="font-weight:300">NEXUS</span></div>
+        <a href="mailto:metanexus77@gmail.com" style="color:white; text-decoration:none; font-size:0.9rem; opacity:0.8;">metanexus77@gmail.com</a>
     </nav>
 
     <section class="hero container">
@@ -181,7 +181,7 @@
     </section>
 
     <footer>
-        &copy; 2026 NexusMeta Solutions. Systems Online.
+        &copy; 2026 MetaNexus Private Limited. All rights reserved.
     </footer>
 
     <script>
