--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
             <div class="hidden md:flex gap-8 text-sm font-semibold tracking-wide text-gray-300">
                 <a href="#home" class="hover:text-cyan-400 transition-colors">HOME</a>
                 <a href="#services" class="hover:text-cyan-400 transition-colors">SERVICES</a>
+                <a href="#projects" class="hover:text-cyan-400 transition-colors">PROJECTS</a>
                 <a href="#about" class="hover:text-cyan-400 transition-colors">APPROACH</a>
             </div>
             
@@ -297,6 +298,29 @@
                     <h3 class="text-xl font-bold mb-3 text-white">AI & Automation</h3>
                     <p class="text-gray-400 text-sm leading-relaxed">
                         Integrate cutting-edge AI models and automate repetitive workflows to save time and increase efficiency.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="projects" class="py-24 relative bg-black/20">
+        <div class="max-w-7xl mx-auto px-6">
+            <div class="text-center mb-16" data-aos="fade-up">
+                <h2 class="text-4xl font-bold mb-4">Our <span class="text-cyan-400">Products</span></h2>
+                <p class="text-gray-400">Innovative solutions built for real-world impact.</p>
+            </div>
+
+            <div class="flex justify-center">
+                <div class="prism-glass p-8 rounded-2xl max-w-md w-full" data-aos="fade-up" data-aos-delay="100">
+                    <div class="w-14 h-14 bg-gradient-to-br from-blue-600 to-cyan-400 rounded-xl flex items-center justify-center mb-6 shadow-lg shadow-cyan-500/20">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
+                        </svg>
+                    </div>
+                    <h3 class="text-xl font-bold mb-3 text-white">Scrapcy</h3>
+                    <p class="text-gray-400 text-sm leading-relaxed">
+                        Platform where Buyer and seller can connect who deals in Scrap. We also provide e-auction services and this product can also Handle RFQ on both end, Buyer/Seller.
                     </p>
                 </div>
             </div>
