--- a/index.html
+++ b/index.html
@@ -312,16 +312,32 @@
             </div>
 
             <div class="flex justify-center">
-                <div class="prism-glass p-8 rounded-2xl max-w-md w-full" data-aos="fade-up" data-aos-delay="100">
+                <div class="prism-glass p-8 rounded-2xl max-w-2xl w-full relative" data-aos="fade-up" data-aos-delay="100">
+                    
+                    <div class="absolute top-6 right-6">
+                        <span class="bg-blue-900/40 text-cyan-400 text-[10px] font-bold px-3 py-1 rounded-full border border-cyan-500/30 tracking-widest animate-pulse">
+                            COMING SOON
+                        </span>
+                    </div>
+
                     <div class="w-14 h-14 bg-gradient-to-br from-blue-600 to-cyan-400 rounded-xl flex items-center justify-center mb-6 shadow-lg shadow-cyan-500/20">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4" />
                         </svg>
                     </div>
-                    <h3 class="text-xl font-bold mb-3 text-white">Scrapcy</h3>
-                    <p class="text-gray-400 text-sm leading-relaxed">
-                        Platform where Buyer and seller can connect who deals in Scrap. We also provide e-auction services and this product can also Handle RFQ on both end, Buyer/Seller.
+                    
+                    <h3 class="text-2xl font-bold mb-4 text-white">Scrapcy</h3>
+                    <p class="text-gray-400 text-sm leading-relaxed mb-6">
+                        A comprehensive B2B marketplace revolutionizing the scrap trade industry. Features include seamless buyer-seller matching, real-time e-auction capabilities, and an end-to-end Request for Quotation (RFQ) management system for streamlined negotiations.
                     </p>
+
+                    <div class="border-t border-white/10 pt-4 flex items-center justify-between">
+                        <span class="text-gray-500 text-xs uppercase tracking-wide font-semibold">Website</span>
+                        <a href="https://scrapcy.in" class="text-cyan-400 text-sm font-bold tracking-wide hover:text-white transition-colors flex items-center gap-2">
+                            Scrapcy.in
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" /></svg>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
