--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
                     <div class="border-t border-white/10 pt-4 flex items-center justify-between">
                         <span class="text-gray-500 text-xs uppercase tracking-wide font-semibold">Website</span>
-                        <a href="https://scrapcy.in" class="text-cyan-400 text-sm font-bold tracking-wide hover:text-white transition-colors flex items-center gap-2">
+                        <a href="https://scrapcy.in" target="_blank" class="text-cyan-400 text-sm font-bold tracking-wide hover:text-white transition-colors flex items-center gap-2">
                             Scrapcy.in
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" /></svg>
                         </a>
