--- a/index.html
+++ b/index.html
@@ -389,9 +389,9 @@
                 <p class="text-gray-400 text-sm mb-6">Tell us about your project. We'll make it reality.</p>
                 
                 <div class="flex flex-col items-center gap-4">
-                    <a href="mailto:metanexus77@gmail.com" class="group flex items-center gap-3 px-6 py-3 rounded-full bg-white/5 hover:bg-white/10 border border-white/10 hover:border-cyan-400/50 transition-all duration-300">
+                    <a href="mailto:connect@metanxus.com" class="group flex items-center gap-3 px-6 py-3 rounded-full bg-white/5 hover:bg-white/10 border border-white/10 hover:border-cyan-400/50 transition-all duration-300">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-cyan-400" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" /></svg>
-                        <span class="text-gray-200 text-base font-medium group-hover:text-white">metanexus77@gmail.com</span>
+                        <span class="text-gray-200 text-base font-medium group-hover:text-white">connect@metanxus.com</span>
                     </a>
                 </div>
             </div>
